# winedll

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
cmake/toolchains/: i686-windows-clang.cmake
dlls/advapi32/: CMakeLists.txt
dlls/kernel32/: CMakeLists.txt
dlls/kernelbase/: CMakeLists.txt
dlls/msvcr100/: msvcr100.spec
dlls/msvcr110/: msvcr110.spec
dlls/msvcr120/: msvcr120.spec
dlls/msvcr70/: msvcr70.spec
dlls/msvcr71/: msvcr71.spec
dlls/msvcr80/: msvcr80.spec
dlls/msvcr90/: msvcr90.spec
dlls/msvcrt/: CMakeLists.txt  concurrency.c  console.c  ctype.c  except.c  file.c  lock.c  math.c  misc.c  scanf.c  stubs.c
dlls/ntdll/: CMakeLists.txt
dlls/ucrtbase/: ucrtbase.spec
dlls/user32/: CMakeLists.txt
dlls/winecrt0/: crt_dllmain.c
imports/kernel32/: CMakeLists.txt  kernel32.def
include/: msxml.h  oaidl.h  objidl.h  objidlbase.h  oleidl.h  propidl.h  servprov.h  unknwn.h  urlmon.h  wtypes.h
include/msvcrt/: corecrt_startup.h
include/wine/: asm.h  debug.h  exception.h
libs/musl/: CMakeLists.txt
tools/: generate_def.py  generate_stubs.py  merge_specs.py  spec_parser.py
